# webrtcdemo

./: README.md  webrtcdemo.sln
audiocapture/: audio_device.cpp  audiocapture.vcxproj  recordingdata - 副本.pcm
commonlib/: commonlib.vcxproj  utility.cpp  utility.h
doc/: webrtc.uml
js/cavans/: draw_rectangle.html
js/css/: main.css
js/flv.js/: play_flv_file.html
js/flv.js/node_media_server/: hask_nms.js  package-lock.json  package.json
js/getlocaldevice/: index.html
js/getlocaldevice/js/: main.js
js/video.js/: play_hls.html  play_local_mp4.html  play_rtmp.html
js/video_element/: play.html
peerconnection/: OWNERS
peerconnection/client/: conductor.cc  conductor.h  defaults.cc  defaults.h  flag_defs.h  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc  peer_connection_client.h
peerconnection/client/linux/: main.cc  main_wnd.cc  main_wnd.h
peerconnection/server/: data_socket.cc  data_socket.h  main.cc  peer_channel.cc  peer_channel.h  server_test.html  utils.cc  utils.h
recordplayout/: recordplayout.cpp  recordplayout.vcxproj
simpleplayer/: Makefile.am  Makefile.in  configure  configure.ac  main.cpp  sdlwrapper.cpp  sdlwrapper.h  simpleplayer.cpp  simpleplayer.h
solatest/: UpgradeLog.htm  main.cpp  solatest.sln  solatest.vcproj  solatest.vcxproj  solatest.vcxproj.filters
solatest/Backup/: solatest.sln
videocapture/: video_capture_demo.cpp  video_capture_demo.h  videocapture.cpp  videocapture.vcxproj  videocapture.vcxproj.filters
videocapture/x64/Debug/: vc141.idb
webrtcdemo/: audio_device.cpp  webrtcdemo.vcxproj
(+7 files in other folders)
